example of how to get data from the url
