# tiltifyApi/openapi.server.gen.go
@@ -56,6 +56,9 @@ type ServerInterface interface {
 	// (PATCH /causes/{id}/visibility-options)
 	PatchCausesIdVisibilityOptions(ctx echo.Context, id int) error
 
+	// (GET /causes/{slug})
+	GetCausesSlug(ctx echo.Context, slug string) error
+
 	// (GET /fundraising-events)
 	GetFundraisingEvents(ctx echo.Context, params GetFundraisingEventsParams) error
 
@@ -112,6 +115,9 @@ type ServerInterface interface {
 
 	// (GET /users/{id}/teams)
 	GetUsersIdTeams(ctx echo.Context, id int, params GetUsersIdTeamsParams) error
+
+	// (GET /users/{slug})
+	GetUsersSlug(ctx echo.Context, slug string) error
 }
 
 // ServerInterfaceWrapper converts echo contexts to parameters.
@@ -547,6 +553,22 @@ func (w *ServerInterfaceWrapper) PatchCausesIdVisibilityOptions(ctx echo.Context
 
 	// Invoke the callback with all the unmarshalled arguments
 	err = w.Handler.PatchCausesIdVisibilityOptions(ctx, id)
+	return err
+}
+
+// GetCausesSlug converts echo context to params.
+func (w *ServerInterfaceWrapper) GetCausesSlug(ctx echo.Context) error {
+	var err error
+	// ------------- Path parameter "slug" -------------
+	var slug string
+
+	err = runtime.BindStyledParameterWithLocation("simple", false, "slug", runtime.ParamLocationPath, ctx.Param("slug"), &slug)
+	if err != nil {
+		return echo.NewHTTPError(http.StatusBadRequest, fmt.Sprintf("Invalid format for parameter slug: %s", err))
+	}
+
+	// Invoke the callback with all the unmarshalled arguments
+	err = w.Handler.GetCausesSlug(ctx, slug)
 	return err
 }
 
@@ -1148,6 +1170,22 @@ func (w *ServerInterfaceWrapper) GetUsersIdTeams(ctx echo.Context) error {
 	return err
 }
 
+// GetUsersSlug converts echo context to params.
+func (w *ServerInterfaceWrapper) GetUsersSlug(ctx echo.Context) error {
+	var err error
+	// ------------- Path parameter "slug" -------------
+	var slug string
+
+	err = runtime.BindStyledParameterWithLocation("simple", false, "slug", runtime.ParamLocationPath, ctx.Param("slug"), &slug)
+	if err != nil {
+		return echo.NewHTTPError(http.StatusBadRequest, fmt.Sprintf("Invalid format for parameter slug: %s", err))
+	}
+
+	// Invoke the callback with all the unmarshalled arguments
+	err = w.Handler.GetUsersSlug(ctx, slug)
+	return err
+}
+
 // This is a simple interface which specifies echo.Route addition functions which
 // are present on both echo.Echo and echo.Group, since we want to allow using
 // either of them for path registration
@@ -1190,6 +1228,7 @@ func RegisterHandlersWithBaseURL(router EchoRouter, si ServerInterface, baseURL 
 	router.GET(baseURL+"/causes/:id/permissions", wrapper.GetCausesIdPermissions)
 	router.GET(baseURL+"/causes/:id/visibility-options", wrapper.GetCausesIdVisibilityOptions)
 	router.PATCH(baseURL+"/causes/:id/visibility-options", wrapper.PatchCausesIdVisibilityOptions)
+	router.GET(baseURL+"/causes/:slug", wrapper.GetCausesSlug)
 	router.GET(baseURL+"/fundraising-events", wrapper.GetFundraisingEvents)
 	router.GET(baseURL+"/fundraising-events/:id", wrapper.GetFundraisingEventsId)
 	router.GET(baseURL+"/fundraising-events/:id/campaigns", wrapper.GetFundraisingEventsIdCampaigns)
@@ -1209,5 +1248,6 @@ func RegisterHandlersWithBaseURL(router EchoRouter, si ServerInterface, baseURL 
 	router.GET(baseURL+"/users/:id/campaigns/:cid", wrapper.GetUsersIdCampaignsCid)
 	router.GET(baseURL+"/users/:id/owned-teams", wrapper.GetUsersIdOwnedTeams)
 	router.GET(baseURL+"/users/:id/teams", wrapper.GetUsersIdTeams)
+	router.GET(baseURL+"/users/:slug", wrapper.GetUsersSlug)
 
 }
